<resources>
    <string name="app_name">OPEN STORE</string>
    <string name="version">Versión 1.0</string>
    <string name="title_activity_main_interface_principal">MainActivity_interface_principal</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="reportar_problema">Reportar Problema</string>
    <string name="sitema_pedidos">Sistema de pedidos</string>
    <string name="historial">Historial</string>
    <string name="DB_APP">APP</string>
    <string name="DB_NEGOCIOS">NEGOCIOS</string>
    <string name="DB_NEGOCIO">NEGOCIO</string>
    <string name="DB_INFORMACION">INFORMACION</string>
    <string name="DB_CATEGORIAS_NEGOCIOS">CATEGORIAS_NEGOCIOS</string>
    <string name="DB_CLIENTES">CLIENTES</string>
    <string name="DB_PEDIDOS">PEDIDOS</string>
    <string name="DB_PEDIDOS_HISTORIAL">PEDIDOS_HISTORIAL</string>
    <string name="DB_PRODUCTOS">PRODUCTOS</string>
    <string name="DB_CATEGORIA">CATEGORIA</string>
    <string name="DB_CONFIGURACION">CONFIGURACION</string>
    <string name="DB_CUENTAS">CUENTAS</string>
    <string name="DB_GALERIA_FOTOS">GALERIA_FOTOS</string>
    <string name="DB_HORARIOS">HORARIOS</string>
    <string name="DB_RESEÑAS">RESEÑAS</string>
    <string name="DB_SERVICIOS">SERVICIOS</string>
    <string name="DB_OFERTAS">OFERTAS</string>
    <string name="DB_TIPS">TIPS</string>
    <string name="DB_CUENTA">CUENTA</string>
    <string name="DB_mensaje_nuevo">mensaje_nuevo</string>
    <string name="DB_ultimo_mensaje">ultimo_mensaje</string>
    <string name="DB_sistema_pedido">sistema_pedidos</string>
    <string name="DB_retiro_negocio">retiro_local</string>
    <string name="DB_delivery">delivery</string>
    <string name="DB_mensaje">mensaje</string>
    <string name="DB_timestamp">timestamp</string>
    <string name="DB_type_mensaje">type_mensaje</string>
    <string name="DB_CHAT">CHAT</string>
    <string name="DB_nombrecliente">nombrecliente</string>
    <string name="DB_nombre">nombre</string>
    <string name="DB_urlfotoPerfil">urlfotoPerfil</string>
    <string name="DB_categoria">categoria</string>
    <string name="DB_color">color</string>
    <string name="DB_nombre_negocio">nombre_negocio</string>
    <string name="DB_descripcion">descripcion</string>
    <string name="DB_telefono">telefono</string>
    <string name="DB_sitio_web">sitio_web</string>
    <string name="DB_id">id</string>
    <string name="DB_pais">pais</string>
    <string name="DB_direccion">direccion</string>
    <string name="DB_codigo_postal">codigo_postal</string>
    <string name="DB_provincia">provincia</string>
    <string name="DB_ciudad">ciudad</string>
    <string name="DBS_PERFIL">PERFIL</string>
    <string name="DBS_imagen_perfil">imagen_perfil</string>
    <string name="db_sdespensa">DESPENSA</string>
    <string name="db_sVerduleria">VERDULERIA</string>
    <string name="db_sPanaderia">PANADERIA</string>
    <string name="db_sCarniceria">CARNICERIA</string>
    <string name="db_sPescaderia">PESCADERIA</string>
    <string name="db_sPizzeria">PIZZERIA</string>
    <string name="db_sHeladeria">HELADERIA</string>
    <string name="db_sFiambrerriaQueseria">FIAMBRERIA Y QUESERIA</string>
    <string name="db_negocios">negocios</string>
    <string name="db_clientes">clientes</string>
    <string name="db_cuentas">cuentas</string>
    <string name="db_chat">chat</string>
    <string name="db_puntos">puntos</string>
    <string name="db_email">email</string>
    <string name="db_estrellastotal">estrellastotal</string>
    <string name="business">business</string>
    <string name="client">client</string>
    <string name="offert">offert</string>
    <string name="service">service</string>
    <string name="profile">profile</string>
    <string name="not_log_in">No se pudo iniciar sesión</string>
    <string name="log_out">" Cerrar sesión"</string>
    <string name="not_close_session">No se pudo cerrar sesión</string>
    <string name="not_revoke">No se puede revocar el acceso</string>
    <string name="not_firebase_auth">No se pudo autenticar con Firebase</string>
    <string name="title_activity_maps_orifu">Map</string>
    <string name="nombre_comercial">Nombre Comercial</string>
    <string name="descripcion_comercial">Breve descripción del comercio (opcional)</string>
    <string name="pais_region">País/Región</string>
    <string name="direccion">Dirección (Ej: calle 123)</string>
    <string name="codigo_postal">Código postal:</string>
    <string name="ciudad">Ciudad</string>
    <string name="provincia">Provincia</string>
    <string name="telefono_principal">Télefono principal (opcional)</string>
    <string name="categoria">Categoría</string>
    <string name="sitio_web">Sitio web (opicional)</string>
    <string name="cat_maxikiosco">"MAXIKIOSCO"</string>
    <string name="cat_kiosco">"KIOSCO"</string>
    <string name="cat_almacen">"ALMACEN"</string>
    <string name="cat_mercado">"MERCADO"</string>
    <string name="cat_pizzeria">"PIZZERIA"</string>
    <string name="cat_carniceria">"CARNICERIA"</string>
    <string name="cat_verduleria">"VERDULERIA"</string>
    <string name="cat_panaderia">"PANADERIA"</string>
    <string name="cat_pescaderia">"PESCADERIA"</string>
    <string name="cat_heladeria">"HELADERIA"</string>
    <string name="cat_ferreteria">"FERRETERIA"</string>
    <string name="color_default">"#E1F5FE"</string>
    <string name="color_maxikiosco">"#AB47BC"</string>
    <string name="color_kiosco">"#993366"</string>
    <string name="color_almacen">"#887959"</string>
    <string name="color_mercado">"#26A69A"</string>
    <string name="color_pizzeria">"#ff9933"</string>
    <string name="color_carniceria">"#E53935"</string>
    <string name="color_verduleria">"#339933"</string>
    <string name="color_panaderia">"#cc6633"</string>
    <string name="color_pescaderia">"#0099cc"</string>
    <string name="color_heladeria">"#ff6699"</string>
    <string name="color_ferreteria">"#6633cc"</string>
    <string name="dueño">"Dueño"</string>
    <string name="empleado">"Empleado"</string>
    <string name="debe_elejir_tipo_permiso">"Seleccionar el tipo de permisos de la cuenta"</string>
    <string name="administrador">"Administrador"</string>
    <string name="estandar">"Estandar"</string>
    <string name="no_tienes_permisos_necesarios">No tienes los permisos necesarios</string>
    <string name="mis_productos">"Mis productos"</string>
    <string name="producto_nuevo">"Producto nuevo"</string>
    <string name="imagen_subida">"Imagen subida"</string>
    <string name="continuar">Continuar</string>
    <string name="cambiar_ubicacion">Cambiar Ubicación</string>
    <string name="perfil">Perfil</string>
    <string name="perfil_completo">Perfil completo</string>
    <string name="perfil_negocio_completo">Perfil del negcio completo</string>
    <string name="perfil_negocio">Perfil del negocio</string>
    <string name="editar">Editar</string>
    <string name="actualizar">Actualizar</string>
    <string name="cerrar_sesion">Cerrar sesión</string>
    <string name="ofertas">Ofertas</string>
    <string name="servicios">Servicios</string>
    <string name="negocio">Negocio</string>
    <string name="titulo">Titulo</string>
    <string name="descripcion">Descripción</string>
    <string name="precio">Precio</string>
    <string name="agregar">Agregar</string>
    <string name="informacion">Información</string>
    <string name="contacto">Contacto</string>
    <string name="completar_perfil_negocio">Completar perfil del Negocio</string>
    <string name="clientes">Clientes</string>
    <string name="no_tienes_ningun_cliente">No tienes clientes en tu lista</string>
    <string name="eliminar_oferta">¿Eliminar oferta?</string>
    <string name="si">Si</string>
    <string name="cancelar">Cancelar</string>
    <string name="eliminar_servicio">¿Eliminar servicio?</string>
    <string name="actualizado">actualizado</string>
    <string name="elije_una_categoaria">Elige una categoría</string>
    <string name="uno_o_mas_campos_estan_vacios">Uno o más campos están vacíos</string>
    <string name="debes_elegir_una_categoría">Debes elegir una categoría</string>
    <string name="selecciona_tipo_cuenta">Selecciona el tipo de cuenta</string>
    <string name="debes_elegir_una_dia">Elegir un día o varios dias</string>
    <string name="Informacion_del_negocio">Información del negocio</string>
    <string name="ubicacion">Ubicación</string>
    <string name="configuracion">Configuración</string>
    <string name="pregunta_es_correcta_esta_ubicacion">¿Esta ubicación es correcta?</string>
    <string name="configurar_horario">Configurar horario</string>
    <string name="agrear_nueno_horario">Agregar nuevo horario</string>
    <string name="lunes">Lunes</string>
    <string name="martes">Martes</string>
    <string name="miercoles">Miercoles</string>
    <string name="jueves">Jueves</string>
    <string name="viernes">Viernes</string>
    <string name="sabado">Sabado</string>
    <string name="domingo">Domingo</string>
    <string name="guardar">Guardar</string>
    <string name="guardar_producto">Guardar producto</string>
    <string name="Debe_definir_un_horario_apertura_y_cierre">Debe definir un horario de apertura y cierre</string>
    <string name="veinteycuatrihoras">24 Horas</string>
    <string name="segundo_horario_opcional">Segundo horario (opcional)</string>
    <string name="listo">listo</string>
    <string name="horas">Horas</string>
    <string name="pregunta_eliminar_horario">¿Borrar horario?</string>
    <string name="direccion1">Dirección:</string>
    <string name="telefono">Télefono</string>
    <string name="desconocido">Desconocido</string>
    <string name="sin_informacion">Sin información</string>
    <string name="escriba_un_mensaje">Escriba algo</string>
    <string name="enviar">Enviar</string>
    <string name="chat">Chat</string>
    <string name="historia">Historial</string>
    <string name="vaciar_chat">Vacias chat</string>
    <string name="chat_clientes">Chat clientes</string>
    <string name="mi_tarjeta_de_negocio">Mi tarjeta de negocio</string>
    <string name="tienes_nuevos_mensaje">Tienes nuevos mensajes sin leer</string>
    <string name="cuentas">Cuentas</string>
    <string name="horarios">Horarios</string>
    <string name="sitio_web2">Sitio Web</string>
    <string name="no_tienes_ninguna_cuenta_creada">No tienes ninguna cuenta creada</string>
    <string name="agregar_producto">Agregar producto</string>
    <string name="liquidar_cuenta">Liquidar cuenta</string>
    <string name="escriba_un_precio">Escriba el precio</string>
    <string name="Escriba_el_nombre_del_producto">Escriba el nombre del producto</string>
    <string name="producto">Producto</string>
    <string name="productos">Productos</string>
    <string name="pregunta_elliminar_producto">¿Eliminar producto?</string>
    <string name="liquidar_un_pago_parcial">Pago parcial</string>
    <string name="liquidar_el_pago_final">Liquidar el pago final</string>
    <string name="total">Total:</string>
    <string name="escriba_la_cantidad">Escriba la cantidad</string>
    <string name="tiene_un_pago_parcial_de">Tiene un pago parcial de :</string>
    <string name="cuenta">Cuenta</string>
    <string name="no_ahi_conexion_a_internet">No ahi conexion a internet</string>
    <string name="open_para_clientes">OPEN para clientes</string>
    <string name="sobre_open">Sobre Open</string>
    <string name="eliminar">Eliminar</string>
    <string name="administrar_cuentas">Administrar cuentas</string>
    <string name="delivery">Delivery</string>
    <string name="retira_en_el_local">Retira en el local</string>
    <string name="todo">TODO</string>
    <string name="haz_comentario_de_esta_foto">haz un comentario en esta foto</string>
</resources>