<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">

        <item android:title="@string/negocio">
            <menu>

                <item
                    android:id="@+id/nav_tarjeta"
                    android:icon="@drawable/ic_nav_card"
                    android:title="@string/mi_tarjeta_de_negocio" />
                <item
                    android:id="@+id/nav_perfil"
                    android:icon="@drawable/ic_nav_business"
                    android:title="@string/perfil_negocio" />

                <item
                    android:id="@+id/nav_productos"
                    android:icon="@drawable/ic_nav_producto"
                    android:title="@string/productos" />

                <item
                    android:id="@+id/nav_cuentas"
                    android:icon="@drawable/ic_nav_cuenta"
                    android:title="@string/cuentas" />

                <item
                    android:id="@+id/nav_chat"
                    android:icon="@mipmap/nav_chat"
                    android:title="@string/chat" />

            </menu>
        </item>

    </group>

    <item android:title="@string/cuenta">
        <menu>

            <item
                android:id="@+id/nav_adminnistar_cuenta"
                android:icon="@drawable/ic_nav_admin_cuenta"
                android:title="@string/administrar_cuentas" />

            <item
                android:id="@+id/nav_perfil_cuenta"
                android:icon="@drawable/ic_nav_cuenta_perfil"
                android:title="@string/perfil" />

            <item
                android:id="@+id/nav_revoke"
                android:icon="@mipmap/nav_close"
                android:title="@string/cerrar_sesion" />

        </menu>
    </item>


    <item android:title="@string/informacion">
        <menu>
            <item
                android:id="@+id/nav_info"
                android:icon="@mipmap/ic_nav_business"
                android:title="@string/sobre_open" />

        </menu>
    </item>

</menu>
