<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:gravity="center">

            <LinearLayout
                android:id="@+id/buttonCat_maxikiosco"
                android:layout_width="100dp"
                android:layout_height="120dp"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imegemaxikiosco"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:elevation="2dp"
                    app:srcCompat="@mipmap/logo_maxikiosco" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/cat_maxikiosco"
                    android:textAlignment="center"
                    android:textAllCaps="true"
                    android:textColor="@color/cardview_light_background" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/buttonCat_kiosco"
                android:layout_width="100dp"
                android:layout_height="120dp"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imegeKiosco"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    app:srcCompat="@mipmap/logo_kiosco" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/cat_kiosco"
                    android:textAlignment="center"
                    android:textAllCaps="true"
                    android:textColor="@color/cardview_light_background" />
            </LinearLayout>

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:gravity="center">

            <LinearLayout
                android:id="@+id/buttonCat_almacen"
                android:layout_width="100dp"
                android:layout_height="120dp"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    app:srcCompat="@mipmap/logo_almacen" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/cat_almacen"
                    android:textAlignment="center"
                    android:textAllCaps="true"
                    android:textColor="@color/cardview_light_background" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/buttonCat_mercado"
                android:layout_width="100dp"
                android:layout_height="120dp"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:elevation="2dp"
                    app:srcCompat="@mipmap/logo_mercado" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/cat_mercado"
                    android:textAlignment="center"
                    android:textAllCaps="true"
                    android:textColor="@color/cardview_light_background" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/buttonCat_pizzeria"
                android:layout_width="100dp"
                android:layout_height="120dp"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    app:srcCompat="@mipmap/logo_pizzeria" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/cat_pizzeria"
                    android:textAlignment="center"
                    android:textAllCaps="true"
                    android:textColor="@color/cardview_light_background" />
            </LinearLayout>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:gravity="center">

            <LinearLayout
                android:id="@+id/buttonCat_carniceria"
                android:layout_width="100dp"
                android:layout_height="120dp"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    app:srcCompat="@mipmap/logo_carniceria" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/cat_carniceria"
                    android:textAlignment="center"
                    android:textAllCaps="true"
                    android:textColor="@color/cardview_light_background" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/buttonCat_verduleria"
                android:layout_width="100dp"
                android:layout_height="120dp"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    app:srcCompat="@mipmap/logo_verduleria" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/cat_verduleria"
                    android:textAlignment="center"
                    android:textAllCaps="true"
                    android:textColor="@color/cardview_light_background" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/buttonCat_panaderia"
                android:layout_width="100dp"
                android:layout_height="120dp"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    app:srcCompat="@mipmap/logo_panaderia" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/cat_panaderia"
                    android:textAlignment="center"
                    android:textAllCaps="true"
                    android:textColor="@color/cardview_light_background" />
            </LinearLayout>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:gravity="center">

            <LinearLayout
                android:id="@+id/buttonCat_heladeria"
                android:layout_width="100dp"
                android:layout_height="120dp"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:background="@mipmap/logo_heladeria" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/cat_heladeria"
                    android:textAlignment="center"
                    android:textAllCaps="true"
                    android:textColor="@color/cardview_light_background" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/buttonCat_pescaderia"
                android:layout_width="100dp"
                android:layout_height="120dp"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    app:srcCompat="@mipmap/logo_pescaderia" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/cat_pescaderia"
                    android:textAlignment="center"
                    android:textAllCaps="true"
                    android:textColor="@color/cardview_light_background" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/buttonCat_ferreteria"
                android:layout_width="100dp"
                android:layout_height="120dp"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    app:srcCompat="@mipmap/logo_ferreteria" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/cat_ferreteria"
                    android:textAlignment="center"
                    android:textAllCaps="true"
                    android:textColor="@color/cardview_light_background" />
            </LinearLayout>

        </TableRow>

    </TableLayout>
</android.support.constraint.ConstraintLayout>